# EasyBraggApp

./: EasyImagingApp.pyproject  EasyImagingApp.qmlproject  LICENSE  README.md  pyproject.toml
EasyImagingApp/Gui/Globals/: ApplicationInfo.qml
scripts/: install_from_wheel.sh
