[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'easyimaging'
version = '1.0.0'
description = 'Example of a desktop application of advanced complexity with Python backend and EasyApp-based GUI'
authors = [
  {name = 'Christian Dam Vedel', email = 'christian.vedel@ess.eu'}
]
readme = 'README.md'
license = {file = 'LICENSE'}
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python :: 3'
]
requires-python = '>=3.11'
dependencies = [
  'numpy<2'
]

[project.optional-dependencies]
ci = [
  'validate-pyproject[all]',
  'build',
  'wheel'
]

[project.urls]
homepage = 'https://github.com/EasyScience/imaging-app'

[tool.hatch.build.targets.wheel]
packages = ['EasyImagingApp']
#artifacts = ['*.py', '*.qml', 'qmldir']
